--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/Surfing/src/main/webapp/WEB-INF/lib/ojdbc8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	<classpathentry kind="lib" path="D:/oracle/WINDOWS.X64_193000_db_home/jdbc/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/Downloads/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
